tests/negative/Internal/Positivity/Evil.juvix
module Evil;

type Evil (f : Type -> Type) :=
  magic : f (Evil f) -> Evil f;
